tests/test171.rael.exp
module(:Math)
3.1415926535897931
cfunc(:Floor, 1)
2
Void
Error [tests/test171.rael:8:5]: Expected a number
| log :Math:Floor("string")
|     ^
